# K4A_OpenVR

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  driver.vrdrivermanifest
cmake/: FindK4A.cmake  imgui.cmake
k4a_openvr_calibrator/: README.md  pubspec.yaml
k4a_openvr_calibrator/android/app/: build.gradle
k4a_openvr_calibrator/android/app/src/main/: AndroidManifest.xml
k4a_openvr_calibrator/android/app/src/main/kotlin/com/example/k4a_openvr_calibrator/: MainActivity.kt
k4a_openvr_calibrator/android/app/src/profile/: AndroidManifest.xml
k4a_openvr_calibrator/ios/Runner/: Info.plist
k4a_openvr_calibrator/ios/Runner.xcodeproj/: project.pbxproj
k4a_openvr_calibrator/lib/: attitude.dart  calibrator copy.dart  calibrator.dart  main.dart  scaffolding.dart  services.dart
k4a_openvr_calibrator/test/: attitude_indicator_test.dart  widget_test.dart
k4a_openvr_calibrator/web/: index.html  manifest.json
k4a_openvr_calibrator/windows/: CMakeLists.txt  calibrator copy 2.cc  calibrator.cc  calibrator_test.cc
k4a_openvr_calibrator/windows/runner/: Runner.rc  main.cpp
protos/: calibration.proto
src/: CMakeLists.txt  dllmain.cc  driver.cc  driver.h  driverlog.h  provider.cc  watchdog.cc
src/calibrator/: calibrate.cpp  calibration.h  calibrator.sln  calibrator.vcxproj  calibrator.vcxproj.filters  imgui.ini  main.cpp
src/calibrator/calibrator/: CMakeLists.txt  NOTICE  bone_calibrator_window.cpp  bone_calibrator_window.h  bone_calibrator_window.ui  main.cpp  new_profile_dialog.cpp  new_profile_dialog.h  new_profile_dialog.ui
src/driver/: CMakeLists.txt  k4a_driver.cpp  k4a_driver.h  log.cpp  log.h
src/provider/: CMakeLists.txt  SimpleKalmanFilter.cpp  SimpleKalmanFilter.h  bone_filter.cpp  bone_filter.h  bone_provider.cpp  bone_provider.h
src/windows/: CMakeLists.txt  dllmain.cpp
tests/: CMakeLists.txt  openvr_pose_avg-ut.cc  provider-ut.cc
